# starfish

./: .gitignore  .release.conf  .taskmd.yaml  Makefile  README.md  build.sbt
adapters/: README.md
archive/: build.sbt
docs/: index.md  package-lock.json  package.json
examples/: README.md
project/: plugins.sbt
protocol/: README.md
scripts/: README.md  check-file-length.sh  pre-commit  run-integration-tests.sh  run-sdk-integration-tests.sh
sdks/: README.md
sdks/python/: CLAUDE.md  README.md  pyproject.toml
sdks/python/integration/: conftest.py  test_connection.py  test_data.py  test_messaging.py  test_presence.py  test_resume.py  test_session.py  test_topics.py
sdks/python/starfish/: __init__.py  client.py  clock.py  connection.py  data.py  emitter.py  events.py  heartbeat.py  id.py  limits.py  messaging.py  pending.py  pool.py  presence.py  session.py  topics.py  transport.py  types.py
sdks/python/tests/: test_clock.py  test_data.py  test_emitter.py  test_id.py  test_limits.py  test_messaging.py  test_pending.py  test_pool.py  test_presence.py  test_session.py  test_topics.py
servers/: README.md
servers/python/: README.md  pyproject.toml
servers/python/src/starfish_server/: __init__.py  __main__.py  client.py  config.py  data_store.py  errors.py  handler.py  handler_connection.py  handler_data.py  handler_messaging.py  handler_pool.py  handler_pool_match.py  handler_presence.py  handler_rtc.py  handler_session.py  handler_system.py  handler_topic.py  heartbeat.py  id.py  limits.py  pool.py  pool_broadcast.py  presence.py  resume.py  server.py  session.py  types.py
servers/python/tests/: conftest.py  helpers.py  test_data_store.py  test_errors.py  test_handler_connection.py  test_handler_data.py  test_handler_messaging.py  test_handler_pool.py  test_handler_rtc.py  test_handler_session.py  test_handler_system.py  test_handler_topic.py  test_integration.py  test_session.py
tasks/: 01kwyst27-implement-typescript-sdk.md  01kwyst2r-implement-python-sdk.md  01kwyst3n-implement-go-sdk.md  01kwyst4k-implement-typescript-server.md  01kwyst53-implement-python-server.md  01kwyst5m-implement-go-server.md  01kwyst6q-implement-p5-js-adapter.md  01kwyst79-implement-three-js-adapter.md  01kwyst7v-implement-touchdesigner-adapter.md  01kx1s0r3-create-typescript-sdk-example-project.md  01kx1s0rz-create-python-sdk-example-project.md  01kx1s0sd-create-go-sdk-example-project.md  01kx1s2ca-add-project-documentation-site-using-vitepress.md  01kx1s4wc-create-p5-js-adapter-example-project.md  01kx1s4wx-create-three-js-adapter-example-project.md  01kx1s4x6-create-touchdesigner-adapter-example-project.md  (+153 more)
tests/: README.md
(+486 files in other folders)
