[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "starfish-client"
version = "0.0.1"
description = "Python client SDK for the Starfish realtime protocol"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["starfish", "realtime", "websockets", "collaborative", "protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "websockets>=12.0",
]

[project.urls]
Homepage = "https://github.com/driangle/starfish"
Repository = "https://github.com/driangle/starfish"
Issues = "https://github.com/driangle/starfish/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["starfish"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
