[project]
name = "starfish-server"
version = "0.2.0"
description = "Starfish Protocol Server - Python implementation"
requires-python = ">=3.11"
dependencies = ["websockets>=12.0"]

[project.scripts]
starfish-server = "starfish_server.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/starfish_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]
